# qtfsviewer

./: CMakeLists.txt  README.md  darkstyle.h  qfilterworker.cpp  qfilterworker.h  resources.qrc  tfs_dataframe.h  tfsdatafiltermodel.cpp  tfshelper.h  tfsmodel.cpp  tfsmodel.h  tfspropertymodel.cpp  tfspropertymodel.h  tfsviewer.pro  viewer.cpp  viewer.h  viewer.ui
res/: darkstyle.qss
src/: darkstyle.cpp  darkstyle.h  main.cpp  qfilterworker.cpp  tfsdatafiltermodel.h  tfsmodel.cpp  tfsviewer_en_150.ts  viewer.cpp  viewer.h  viewer.ui
